examples/neg/issue373/handler_correct_annotation.effekt
interface Eff[A] {
  def op(x: A): A
}

def main() =
  try { val msg: String = eff.op[Int]("hello"); println(msg) }
  with eff: Eff[Int] { def op(x) = resume(x / 1) }